# omni-plugins

./: .gitignore  README.md
tools/cosmos-rust-tool/: plugin.json
tools/cosmos-rust-tool/src/: main.rs
tools/cron-echo/: Cargo.toml  mcp-config.json  plugin.json
tools/cron-echo/src/: main.rs
tools/prompt/: mcp-config.json  plugin.json  server.py
tools/prompt-python/: mcp-config.json  plugin.json  server.py
tools/test-js-tool/: mcp-config.json  plugin.json  server.js
tools/test-python/: mcp-config.json  plugin.json  server.py
tools/test-python-tool/: mcp-config.json  plugin.json  server.py
tools/test-ref-plugin/: Cargo.toml  plugin.json
tools/test-ref-plugin/src/: main.rs
tools/test-rust-tool/: Cargo.toml
tools/test-rust-tool-2/: plugin.json
tools/test-rust-tool-2/src/: main.rs
tools/test-rust-tool/src/: main.rs
