[package]
name = "cron"
version = "0.1.0"
edition = "2021"
description = "Simple echo MCP server for testing multi-source cron plugin switching"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
